# ebook_reader

./: .gitignore  Berlin - 6. L isola degli dei (Fabio... (z-lib.org).epub  Cargo.toml  README.md  Roberto Saviano - La paranza dei bambini.epub  alices-old.epub  book.rs  file.txt  libro.epub  main.rs  meta.json  saviano-old.epub
libri/: alices.epub  angelo.epub  libro.epub  saviano-old.epub  saviano.epub
src/: algorithms.rs  app.rs  book.rs  bookcase.rs  controllers.rs  delegate.rs  formatters.rs  main.rs  ocr.rs  render.rs  utilities.rs  view.rs
src/book/: chapter.rs  epub_text.rs  page.rs  page_element.rs
src/tests/: utilities.rs
src/view/: buttons.rs  mod.rs  render.rs  view.rs
src/widgets/: custom_img.rs  custom_label.rs  custom_scrolls.rs  custom_tooltip.rs  mod.rs
temp/: tmp.epub
