[package]
name = "ebook_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir= "2"
epub = { git = "https://github.com/danigm/epub-rs.git" }
roxmltree = "0.15.0"
druid = { git = "https://github.com/linebender/druid.git", features=["im", "svg", "image", "png", "jpeg"] }
unicode-segmentation = "1.10.0"
zip = "0.6.3"
leptess = "0.13.4"