[package]
name = "ebook_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir= "2"
epub = { git = "https://github.com/danigm/epub-rs.git" }
roxmltree = "0.15.0"
druid = { git = "https://github.com/linebender/druid.git", features=["im", "svg", "image", "png", "jpeg"] }
unicode-segmentation = "1.10.0"
zip = "0.6.3"
leptess = "0.13.4"
num_cpus = "*"
rayon = "*"
azul-text-layout = "0.0.4"
regex = "1.3"
serde = {version = "1.0.152", features=["derive"]}
serde_json = "1.0.91"
serde-protobuf = "0.8.2"
