[package]
name = "ebook_reader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
walkdir= "2"
epub = "1.2.4"
roxmltree = "0.15.0"
druid = { git = "https://github.com/linebender/druid.git" , rev="fc05e965c85fced8720c655685e02478e0530e94", features=["im", "svg", "image", "png", "jpeg"] }
unicode-segmentation = "1.10.0"
zip = "0.6.3"
leptess = "0.13.4"
num_cpus = "*"
rayon = "*"
regex = "1.3"
serde = {version = "1.0.152", features=["derive"]}
serde_json = "1.0.91"
serde-protobuf = "0.8.2"
druid-widget-nursery = { git = "https://github.com/linebender/druid-widget-nursery", rev="cad6bcb7eababdc5958478098d4a60dd816aa194" }
isolang = "2.2.0"
